default/objects/Starts__c/Starts__c.object-meta.xml
<CustomObject>
    <description>A related list to Account that holds fuel pumping volume amounts for the account from the transaction system, GFN.</description>
    <label>Starts</label>
    <nameField>
        <displayFormat>NS# {00000000}</displayFormat>
        <label>Starts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Starts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>