default/objects/Starts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account to which the Starts data is related based on match to GFN_Nr.</description>
    <inlineHelpText>Account to which the Starts data is related based on match to GFN_Nr.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Starts</relationshipLabel>
    <relationshipName>Starts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>