default/objects/Starts__c/fields/client_week_number__c.field-meta.xml
<CustomField>
    <fullName>client_week_number__c</fullName>
    <description>client_week_number from GFN. The client&#39;s week in which the fuel pumping volume occurred.</description>
    <inlineHelpText>client_week_number from GFN. The client&#39;s week in which the fuel pumping volume occurred.</inlineHelpText>
    <label>Client Week Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>