default/objects/Starts__c/fields/First_Pump_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pump_Date__c</fullName>
    <description>First fueling transaction date as recorded in GFN and shown on Account. Formula field to show what is recorded on Account.</description>
    <formula>Account__r.First_Pump_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First fueling transaction date as recorded in GFN and shown on Account.</inlineHelpText>
    <label>First Pump Date</label>
    <type>Date</type>
</CustomField>