default/objects/Starts__c/fields/ft_week__c.field-meta.xml
<CustomField>
    <fullName>ft_week__c</fullName>
    <description>The week year and number in which the customer first pumped any fuel volume as recorded in GFN.</description>
    <formula>Account__r.ft_week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The week year and number in which the customer first pumped any fuel volume as recorded in GFN.</inlineHelpText>
    <label>GFN FT Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>