default/objects/Starts__c/fields/gfn_nr_wk_nr__c.field-meta.xml
<CustomField>
    <fullName>gfn_nr_wk_nr__c</fullName>
    <description>Concatenated key containing GFN Number and Client Week Number to uniquely identify each row of Starts per customer per week</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenated key containing GFN Number and Client Week Number to uniquely identify each row of Starts per customer per week</inlineHelpText>
    <label>GFN_Nr_Wk_Nr</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>