default/objects/Starts__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship for mapping opportunities and net starts. Field created in scope of W-000044.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Starts</relationshipLabel>
    <relationshipName>Starts</relationshipName>
    <type>Lookup</type>
</CustomField>