default/objects/Starts__c/fields/Pump_date__c.field-meta.xml
<CustomField>
    <fullName>Pump_date__c</fullName>
    <formula>First_Pump_Date__c  + 7 * ( client_week_number__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pump date</label>
    <type>Date</type>
</CustomField>