default/objects/Starts__c/fields/Pump_date_oppty__c.field-meta.xml
<CustomField>
    <fullName>Pump_date_oppty__c</fullName>
    <formula>Opportunity__r.PPR_Transit_First_Pump_Date__c + 7*(client_week_number__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pump date oppty</label>
    <type>Date</type>
</CustomField>