default/objects/Starts__c/fields/report_week__c.field-meta.xml
<CustomField>
    <fullName>report_week__c</fullName>
    <description>report_week from GFN; to hold raw unformatted number coming from GFN and NOT to be exposed in the user views</description>
    <inlineHelpText>report_week from GFN; to hold raw unformatted number coming from GFN and NOT to be exposed in the user views</inlineHelpText>
    <label>GFN Report Week</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>