default/objects/Starts__c/fields/report_week_form__c.field-meta.xml
<CustomField>
    <fullName>report_week_form__c</fullName>
    <description>Report Week as a formula field to show the raw number in report_week__c from GFN as Text to display without separators: 1,000 will be 1000</description>
    <formula>TEXT(report_week__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Report Week from GFN; the week in which the report is generated.</inlineHelpText>
    <label>Report Week</label>
    <type>Text</type>
</CustomField>