default/objects/Starts__c/fields/starts__c.field-meta.xml
<CustomField>
    <fullName>starts__c</fullName>
    <description>Calculated Starts value; a projection of the anticipated annual fuel volume calculated from actual fuel pumping volume using an algorithm.</description>
    <inlineHelpText>Calculated Starts value; a projection of the anticipated annual fuel volume calculated from actual fuel pumping volume using an algorithm.</inlineHelpText>
    <label>Starts</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>