default/objects/Starts__c/fields/Transit_ID__c.field-meta.xml
<CustomField>
    <fullName>Transit_ID__c</fullName>
    <description>Transit ID with week number. Field created in scope of W-000044.</description>
    <externalId>true</externalId>
    <label>Transit_ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>