default/objects/Starts__c/fields/volume__c.field-meta.xml
<CustomField>
    <fullName>volume__c</fullName>
    <description>Fuel Volume for the week from GFN</description>
    <inlineHelpText>Fuel Volume for the week from GFN</inlineHelpText>
    <label>Fuel Volume</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>